infrastructure/tower-launcher.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tower-nf
